@@ -36,13 +36,13 @@ class JRequestTest_GetVar extends PHPUnit_Framework_TestCase
 
 	public static function setUpBeforeClass() {
 		require_once dirname(__FILE__).DS.'JFilterInput-mock-general.php';
-		$filter = JFilterInput::getInstance();
+		$filter = &JFilterInput::getInstance();
 		self::$filter = JFilterInput::getInstance();
 		$filter = new JFilterInputJRequest;
 	}
 
 	public static function tearDownAfterClass() {
-		$filter = JFilterInput::getInstance();
+		$filter = &JFilterInput::getInstance();
 		$filter = self::$filter;
 	}
 
