@@ -27,8 +27,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
-23-Jun-2010
-# Added unit tests for JAdapter, JAdapterInstance and one for JObject
+
+23-Jun-2010 Ian MacLennan
++ Added unit tests for JAdapter, JAdapterInstance and one for JObject
+# Fixed unit tests that were breaking because mocks were not getting properly injected
 
 22-Jun-2010 Mark Dexter
 # Added test fixes for failing system tests on Hudson server
